@@ -11,6 +11,7 @@
 * Added the support for lateral and longitudinal chromatic aberration (issue #409)
 * Added the support for SINC pixel filter (issue #415)
 * Added the support for CATMULLROM pixel filter (issue #415)
+* It is now possible to disable Optix (with property context.cuda.optix.enable) even if it is detected and available
 
 ### Fixed Bugs
 
